Fix some more styles to make sure that in portait on phone the text is more readable.

--- a/public/styles.css
+++ b/public/styles.css
@@ -58,7 +58,7 @@ body {
   -ms-flex-direction: column;
   flex-direction: column;
   text-align: center;
-  padding: 4rem 2rem;
+  padding: 6rem 2rem;
 }
 
 @media only screen and (orientation: landscape) {
@@ -170,8 +170,8 @@ a:hover {
 }
 
 .profile h1 {
-  font-size: 2rem;
-  margin: 1rem;
+  font-size: 3rem;
+  margin: 0 0 1.5rem;
 }
 
 .profile p {
@@ -205,6 +205,30 @@ nav a:hover {
   .profile p {
     font-size: 1.75rem;
     line-height: 2.5rem;
+  }
+}
+
+@media only screen and (max-device-width: 480px) and (orientation: portrait) {
+  body.home .profile {
+    max-width: 45rem;
+  }
+
+  .profile h1 {
+    font-size: 5rem;
+    margin: 0 0 2rem;
+  }
+
+  .profile p {
+    font-size: 2.25rem;
+    line-height: 3.5rem;
+  }
+
+  nav a {
+    height: 5rem;
+    width: 5rem;
+    line-height: 5rem;
+    font-size: 4rem;
+    margin: 0 1rem;
   }
 }
 
